syntax = "proto3";

package com.alpha.backend.grpc;

option java_multiple_files = true;
option java_package = "com.alpha.backend.grpc";
option java_outer_classname = "EmbeddingStreamProto";

// 데이터 스트리밍 서비스
service EmbeddingStreamService {
  // [기존] 서버 스트리밍 RPC: Batch Server가 요청하면, Python 서버가 Embedding 데이터를 스트림으로 전송
  rpc StreamEmbedding(StreamEmbeddingRequest) returns (stream RowChunk);

  // [신규] 클라이언트 스트리밍 RPC: Python 서버가 데이터를 스트림으로 Batch Server에 전송
  rpc IngestDataStream(stream IngestDataRequest) returns (IngestDataResponse);
}

// 스트리밍 요청
message StreamEmbeddingRequest {
  // 마지막으로 처리된 UUID (체크포인트)
  // 이 값이 비어있으면 처음부터 전송
  optional string last_processed_uuid = 1;
  // 요청할 청크 크기 (0이면 서버 기본값 사용)
  optional int32 chunk_size = 2;
}

// 데이터 청크
message RowChunk {
  repeated RecruitRow rows = 1;
}

// 개별 행 데이터
message RecruitRow {
  string id = 1; // UUID v7
  string company_name = 2;
  int32 exp_years = 3;
  string english_level = 4;
  string primary_keyword = 5;
  repeated float vector = 6;
}

// --- 신규 메시지 정의 ---

// 클라이언트 스트리밍 요청 메시지
message IngestDataRequest {
  // 첫 번째 요청에만 메타데이터를 포함
  oneof request_type {
    IngestMetadata metadata = 1;
    // 실제 데이터 청크 (JSON 문자열 형태)
    bytes data_chunk = 2;
  }
}

// 스트리밍 메타데이터
message IngestMetadata {
  string domain = 1;      // "recruit", "candidate" 등
  string file_name = 2;
  int32 vector_dimension = 3; // 벡터 차원
}

// 클라이언트 스트리밍 응답 메시지
message IngestDataResponse {
  bool success = 1;
  int32 received_chunks = 2; // 수신된 총 청크 수
  string message = 3;
}
